# alphago

./: .gitignore  LICENSE  OPTIMIZATION.md  README.md  pyproject.toml
configs/: default.yaml  smoke.yaml
go_agent/: __init__.py  arena.py  buffer.py  config.py  encoding.py  game.py  logging_utils.py  mcts.py  model.py  render.py  selfplay.py  train.py
scripts/: handicap_study.py  play_human.py  train_main.py  watch_game.py
study/: handicap_white128.csv  handicap_white64.csv
